Fix random whitespace from incorrect grid tracks

--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ p, h4, h5{
     grid-row: 2 / 4;
     grid-column: 1 / 3;
     display: grid;
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: 2fr, 2fr, 2fr, 1fr;
     grid-template-columns: repeat(2, 1fr);
     width: 750px;
     gap: 30px;
@@ -192,7 +192,6 @@ p, h4, h5{
 
 #content .announcements .announcement.announcement-no-border{
     border-bottom: none;
-    margin-bottom: -265px;
 }
 
 #announcements-text,
